[gd_scene load_steps=20 format=3 uid="uid://cntg2uoiu5u5x"]

[ext_resource type="Script" uid="uid://xcxlc3h4s55u" path="res://scripts/creditos.gd" id="1_idjxt"]
[ext_resource type="Texture2D" uid="uid://buu016yjlw7su" path="res://assets/BckGrnd/Nivel.png" id="1_spoww"]
[ext_resource type="FontFile" uid="uid://cpv7bwckc7nqu" path="res://assets/Fonts/Seagram_tfb.ttf" id="2_ul0vb"]
[ext_resource type="Texture2D" uid="uid://c8m4k5tnnhfda" path="res://assets/BckGrnd/paperallborder.png" id="3_idjxt"]
[ext_resource type="Texture2D" uid="uid://d0bgtqglubdak" path="res://assets/credit/Javier.png" id="4_ufadv"]
[ext_resource type="Script" uid="uid://b8yohj6agvbay" path="res://scripts/btnvolver.gd" id="5_2ove7"]
[ext_resource type="Texture2D" uid="uid://c2mdfwxgep28x" path="res://assets/credit/matias.png" id="6_3ghxt"]
[ext_resource type="Texture2D" uid="uid://l7jtp66nor1v" path="res://assets/credit/adrian.png" id="7_n1vwi"]
[ext_resource type="Texture2D" uid="uid://c4y15pwgydo8n" path="res://assets/credit/matu.png" id="8_ouidq"]
[ext_resource type="Texture2D" uid="uid://cnhs7tbwyb3uo" path="res://assets/credit/uri.png" id="9_206h8"]
[ext_resource type="AudioStream" uid="uid://b42nd1ocqfu1s" path="res://assets/Sounds/Fantasy_Game_Weapons_Wood Shield_1_Block_Defend_Buckler_Deflect.wav" id="11_n1vwi"]
[ext_resource type="Texture2D" uid="uid://dslqu3vgvkyhw" path="res://assets/credit/anto.png" id="12_86gda"]
[ext_resource type="Texture2D" uid="uid://c02h76kj5qa4r" path="res://assets/credit/lucio.png" id="13_lo4rr"]
[ext_resource type="Texture2D" uid="uid://c0w13ae4d3kf3" path="res://assets/credit/thiago.png" id="14_06cy4"]
[ext_resource type="Texture2D" uid="uid://bxve1ki2wx5dn" path="res://assets/credit/juaco.png" id="15_5dhh5"]
[ext_resource type="Texture2D" uid="uid://dnlj1wukc7ad3" path="res://assets/Icons/der.png" id="16_06cy4"]
[ext_resource type="Texture2D" uid="uid://0v8cge6fmk2k" path="res://assets/Icons/izq.png" id="17_5dhh5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lrn2f"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ghxt"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.8923443, 0.80483663, 0.14891264, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Creditos" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_idjxt")

[node name="Fondo" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_spoww")
expand_mode = 1

[node name="Creditos" type="Label" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ul0vb")
theme_override_font_sizes/font_size = 40
text = "CREDITOS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Caelitronus" type="Label" parent="."]
layout_mode = 0
offset_top = 100.0
offset_right = 1152.0
offset_bottom = 205.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ul0vb")
theme_override_font_sizes/font_size = 36
text = "Caelitonus - Trono Celestial
Realizado por Servetesio Studio"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tipo" type="Label" parent="."]
layout_mode = 0
offset_top = 200.0
offset_right = 1152.0
offset_bottom = 300.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ul0vb")
theme_override_font_sizes/font_size = 34
text = "DESARROLLADORES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Desarrolladores" type="HBoxContainer" parent="."]
layout_mode = 0
offset_top = 310.0
offset_right = 1152.0
offset_bottom = 598.0
theme_override_constants/separation = 20
alignment = 1

[node name="Javier" type="TextureRect" parent="Desarrolladores"]
custom_minimum_size = Vector2(208, 288)
layout_mode = 2
texture = ExtResource("3_idjxt")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="Desarrolladores/Javier"]
layout_mode = 0
offset_left = 4.0
offset_top = 8.0
offset_right = 504.0
offset_bottom = 508.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_ufadv")

[node name="Label" type="Label" parent="Desarrolladores/Javier"]
layout_mode = 0
offset_left = 6.0
offset_top = 212.0
offset_right = 202.0
offset_bottom = 276.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ul0vb")
theme_override_font_sizes/font_size = 24
text = "Javier Juarez"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Matias" type="TextureRect" parent="Desarrolladores"]
custom_minimum_size = Vector2(208, 0)
layout_mode = 2
texture = ExtResource("3_idjxt")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="Desarrolladores/Matias"]
layout_mode = 0
offset_left = 4.0
offset_top = 8.0
offset_right = 504.0
offset_bottom = 508.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("6_3ghxt")

[node name="Label" type="Label" parent="Desarrolladores/Matias"]
layout_mode = 0
offset_left = 6.0
offset_top = 212.0
offset_right = 202.0
offset_bottom = 276.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ul0vb")
theme_override_font_sizes/font_size = 24
text = "Matias Diaz"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Adrian" type="TextureRect" parent="Desarrolladores"]
custom_minimum_size = Vector2(208, 256)
layout_mode = 2
texture = ExtResource("3_idjxt")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="Desarrolladores/Adrian"]
layout_mode = 0
offset_left = 4.0
offset_top = 8.0
offset_right = 504.0
offset_bottom = 508.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("7_n1vwi")

[node name="Label" type="Label" parent="Desarrolladores/Adrian"]
layout_mode = 0
offset_left = 6.0
offset_top = 212.0
offset_right = 202.0
offset_bottom = 276.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ul0vb")
theme_override_font_sizes/font_size = 24
text = "Adrian Briosso"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Matute" type="TextureRect" parent="Desarrolladores"]
custom_minimum_size = Vector2(208, 0)
layout_mode = 2
texture = ExtResource("3_idjxt")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="Desarrolladores/Matute"]
layout_mode = 0
offset_left = 4.0
offset_top = 8.0
offset_right = 504.0
offset_bottom = 508.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_ouidq")

[node name="Label" type="Label" parent="Desarrolladores/Matute"]
layout_mode = 0
offset_left = 6.0
offset_top = 212.0
offset_right = 202.0
offset_bottom = 276.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ul0vb")
theme_override_font_sizes/font_size = 24
text = "Matute"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Uriel" type="TextureRect" parent="Desarrolladores"]
custom_minimum_size = Vector2(208, 0)
layout_mode = 2
texture = ExtResource("3_idjxt")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="Desarrolladores/Uriel"]
layout_mode = 0
offset_left = 4.0
offset_top = 8.0
offset_right = 504.0
offset_bottom = 508.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("9_206h8")

[node name="Label" type="Label" parent="Desarrolladores/Uriel"]
layout_mode = 0
offset_left = 6.0
offset_top = 212.0
offset_right = 202.0
offset_bottom = 276.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ul0vb")
theme_override_font_sizes/font_size = 24
text = "Uriel Lara"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Voces" type="HBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_top = 310.0
offset_right = 1152.0
offset_bottom = 598.0
theme_override_constants/separation = 20
alignment = 1

[node name="Anto" type="TextureRect" parent="Voces"]
custom_minimum_size = Vector2(208, 288)
layout_mode = 2
texture = ExtResource("3_idjxt")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="Voces/Anto"]
layout_mode = 0
offset_left = 4.0
offset_top = 8.0
offset_right = 504.0
offset_bottom = 508.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("12_86gda")

[node name="Label" type="Label" parent="Voces/Anto"]
layout_mode = 0
offset_left = 6.0
offset_top = 212.0
offset_right = 202.0
offset_bottom = 276.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ul0vb")
theme_override_font_sizes/font_size = 24
text = "Anto Fiori"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Lucio" type="TextureRect" parent="Voces"]
custom_minimum_size = Vector2(208, 0)
layout_mode = 2
texture = ExtResource("3_idjxt")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="Voces/Lucio"]
layout_mode = 0
offset_left = 10.0
offset_top = 8.0
offset_right = 510.0
offset_bottom = 585.0
scale = Vector2(0.37, 0.37)
texture = ExtResource("13_lo4rr")

[node name="Label" type="Label" parent="Voces/Lucio"]
layout_mode = 0
offset_left = 6.0
offset_top = 212.0
offset_right = 202.0
offset_bottom = 276.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ul0vb")
theme_override_font_sizes/font_size = 24
text = "Lucio Verdier"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Thiago" type="TextureRect" parent="Voces"]
custom_minimum_size = Vector2(208, 256)
layout_mode = 2
texture = ExtResource("3_idjxt")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="Voces/Thiago"]
layout_mode = 0
offset_left = 4.0
offset_top = 8.0
offset_right = 504.0
offset_bottom = 508.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("14_06cy4")

[node name="Label" type="Label" parent="Voces/Thiago"]
layout_mode = 0
offset_left = 6.0
offset_top = 212.0
offset_right = 202.0
offset_bottom = 276.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ul0vb")
theme_override_font_sizes/font_size = 24
text = "Thiago Ferraro"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Joaquin" type="TextureRect" parent="Voces"]
custom_minimum_size = Vector2(208, 0)
layout_mode = 2
texture = ExtResource("3_idjxt")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="Voces/Joaquin"]
layout_mode = 0
offset_left = 10.0
offset_top = -24.0
offset_right = 510.0
offset_bottom = 642.0
scale = Vector2(0.37, 0.37)
texture = ExtResource("15_5dhh5")

[node name="Label" type="Label" parent="Voces/Joaquin"]
layout_mode = 0
offset_left = 6.0
offset_top = 212.0
offset_right = 202.0
offset_bottom = 276.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ul0vb")
theme_override_font_sizes/font_size = 24
text = "Joaquin Iglesias"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Uriel" type="TextureRect" parent="Voces"]
custom_minimum_size = Vector2(208, 0)
layout_mode = 2
texture = ExtResource("3_idjxt")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="Voces/Uriel"]
layout_mode = 0
offset_left = 4.0
offset_top = 10.0
offset_right = 504.0
offset_bottom = 510.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_ouidq")

[node name="Label" type="Label" parent="Voces/Uriel"]
layout_mode = 0
offset_left = 6.0
offset_top = 212.0
offset_right = 202.0
offset_bottom = 276.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ul0vb")
theme_override_font_sizes/font_size = 24
text = "Matute"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Atras" type="Button" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 158.0
offset_bottom = 78.0
theme_override_styles/normal = SubResource("StyleBoxFlat_lrn2f")
theme_override_styles/hover = SubResource("StyleBoxFlat_3ghxt")
script = ExtResource("5_2ove7")

[node name="Fondo" type="TextureRect" parent="Atras"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 143.0
offset_bottom = 63.0
texture = ExtResource("3_idjxt")
expand_mode = 1

[node name="texto" type="Label" parent="Atras"]
layout_mode = 0
offset_left = 20.0
offset_top = 7.0
offset_right = 126.0
offset_bottom = 58.0
theme_override_colors/font_color = Color(0.627451, 0.52156866, 0.105882354, 1)
theme_override_fonts/font = ExtResource("2_ul0vb")
theme_override_font_sizes/font_size = 40
text = "Atras"
horizontal_alignment = 1

[node name="HoverSound" type="AudioStreamPlayer" parent="Atras"]
stream = ExtResource("11_n1vwi")
volume_db = -1.0
bus = &"SFX"

[node name="Links" type="Button" parent="."]
layout_mode = 0
offset_left = 950.0
offset_top = 10.0
offset_right = 1142.0
offset_bottom = 88.0
theme_override_styles/normal = SubResource("StyleBoxFlat_lrn2f")
theme_override_styles/hover = SubResource("StyleBoxFlat_3ghxt")
script = ExtResource("5_2ove7")

[node name="Fondo" type="TextureRect" parent="Links"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 187.0
offset_bottom = 73.0
texture = ExtResource("3_idjxt")
expand_mode = 1

[node name="Label" type="Label" parent="Links"]
layout_mode = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 186.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ul0vb")
theme_override_font_sizes/font_size = 24
text = "Links de 
Servetesio Studio"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HoverSound" type="AudioStreamPlayer" parent="Links"]
stream = ExtResource("11_n1vwi")
volume_db = -1.0
bus = &"SFX"

[node name="ButtonDer" type="Button" parent="."]
layout_mode = 0
offset_left = 888.0
offset_top = 210.0
offset_right = 960.0
offset_bottom = 282.0
icon = ExtResource("16_06cy4")
flat = true

[node name="ButtonIzq" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 192.0
offset_top = 210.0
offset_right = 264.0
offset_bottom = 282.0
icon = ExtResource("17_5dhh5")
flat = true

[connection signal="pressed" from="Atras" to="Atras" method="_on_pressed"]
[connection signal="pressed" from="Atras" to="." method="_on_atras_pressed"]
[connection signal="pressed" from="Links" to="." method="_on_links_pressed"]
[connection signal="pressed" from="ButtonDer" to="." method="_on_button_der_pressed"]
[connection signal="pressed" from="ButtonIzq" to="." method="_on_button_izq_pressed"]
